--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -234,12 +234,23 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 mx-auto text-center">
-                    <h3>{{ page.title }}</h3>
+                    <h3>Blog</h3>
                 </div>
             </div>
         </div>
     </section>
-
+    <div>
+        <section class="blog-body" ng-class="'bg-dark text-white'" id="{{report.id}}">
+            <div class="container" id="blog-container">
+              <div class="row blog-post">
+                    <div class="col-lg-12 mx-auto text-center">
+                        <h2 class="blog-post-title section-heading"><font color="#bbbbbb">{{ page.title }}</font></h2>
+                        <p class="blog-post-body mb-5" align="left">{{ content }}</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
     <div>
         {{content}}
     </div>
