--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -166,7 +166,7 @@
             };
         });
     </script>
-
+    {% raw %}
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
@@ -177,7 +177,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="index.html?lang={{lang | angular }}">{{texts[6]| angular }}</a>
+                        <a class="nav-link js-scroll-trigger" href="index.html?lang={{lang }}">{{texts[6]}}</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#" data-toggle="modal" data-target="#language">
@@ -202,7 +202,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">{{texts[19] | angular }}</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">{{texts[19]}}</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -239,6 +239,7 @@
             </div>
         </div>
     </section>
+    {% endraw %}
     <div>
         <section class="blog-body" ng-class="'bg-dark text-white'">
             <div class="container" id="blog-container">
@@ -254,7 +255,7 @@
     <div>
         {{content}}
     </div>
-
+    {% raw %}
     <section class="text-white" id="copyright">
         <div class="container">
             <div class="row">
@@ -281,7 +282,7 @@
 
     <!-- Custom scripts for this template -->
     <script src="/js/creative.min.js"></script>
-
+    {% endraw %}
 </body>
 
 </html>
