--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -261,10 +261,10 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
                     <p class="mb-5">
-                        {{texts[15]| angular }} {{texts[16]| angular }}
+                        {{texts[15]}} {{texts[16]}}
                         <br>
                         <br> Copyright © 2018 Vita3K team
-                        <br> {{texts[17]| angular }} Gordon Mackay - <a href="https://gordonmackayillustration.blogspot.co.uk/">Blog</a> - <a href="https://www.etsy.com/uk/shop/GMackayIllustration">Etsy</a>
+                        <br> {{texts[17]}} Gordon Mackay - <a href="https://gordonmackayillustration.blogspot.co.uk/">Blog</a> - <a href="https://www.etsy.com/uk/shop/GMackayIllustration">Etsy</a>
                     </p>
                 </div>
             </div>
