--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -177,7 +177,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="index.html?lang={{lang }}">{{texts[6]}}</a>
+                        <a class="nav-link js-scroll-trigger" href="/index.html?lang={{lang }}">{{texts[6]}}</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#" data-toggle="modal" data-target="#language">
